adding about section

--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
         <img src="./images/forest.png" alt="forest" class="forest">
         <img src="./images/city.png" alt="city" class="city">
     </section>
+    <section class="About">
+        <h1 class="section-title">About</h1>
+        <p class="section-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae pariatur, vel nobis suscipit commodi odio libero atque voluptas quibusdam sint. Deleniti et voluptates quidem repellat similique accusamus quaerat laborum eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque qui autem quae excepturi eum nam, tenetur inventore perspiciatis magnam quasi suscipit laudantium quibusdam velit, fugit, praesentium voluptate et dolore. Sequi.</p>
+    </section>
 </body>
 </html>
